# career-bot-backend

./: .env.example  .gitignore  README.md  logging_config.py  main.py  pyproject.toml  run_counsellor.py  run_researcher.py
counsellor/: __init__.py  agent.py
db/: json_store.py
researcher/: __init__.py  agent.py
